aligned the text-section, line-height fix

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ div#text-section {
   flex-direction: column;
   justify-items: center;
   justify-content: center;
-  margin: 1.5em;
+  margin: 0 0 1.85rem 1.85rem;
 }
 
 h1 {
@@ -50,6 +50,7 @@ p {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   margin: 1.5rem 0 1.5rem 0;
+  line-height: 1.6;
 }
 
 div#price-tag {
